--- a/packages/demos-babylon/src/common/demo-common.css
+++ b/packages/demos-babylon/src/common/demo-common.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@1,200;1,500&family=Roboto:wght@400;700&display=swap');
 
 html, body {
   font-family: 'Roboto', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 130%;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -37,28 +38,30 @@ textarea {
 }
 
 button {
-  background-color: #45454544;
+  background-color: #202020cc;
   width: 100%;
-  border: none;
-  padding: 0.5em 0.5em 0.6em;
+  padding: 0.5em 1em 0.6em;
   border-radius: 4px;
   backdrop-filter: saturate(120%);
-  transition: 0.25s;
+  transition: 0.22s;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 85%;
+  border: 1px solid transparent;
+  box-shadow: 0 0 14px 0px #00000077;
 }
 
 button:hover {
-  background-color: #45454588;
+  border: 1px solid #ffffffcc;
+  background-color: #252525cc;
 }
 
 button:active {
-  background-color: #454545cc;
+  background-color: #454545ee;
 }
 
 .hide {
-  display: hidden;
+  display: none !important;
 }
 
 .loading {
@@ -81,26 +84,68 @@ canvas#renderCanvas {
   touch-action: none;
 }
 
-#uiPanel {
-  position: absolute;
+.panel, .dialog, .textOverlay {
+  display: inline-block;
   border: 1px solid transparent;
   border-radius: 5px;
   margin: 10px;
-  padding: 14px;
-  background-color: #00000033;
+  padding: 16px;
+  background-color: #20202044;
   backdrop-filter: blur(12px) saturate(130%);
 }
 
-#uiPanel label {
+.dialog {
+  background-color: #202020e0;
+  max-width: 500px;
+  box-shadow: 0 0 20px #00000066;
+}
+
+.dialog h2 {
+  font-size: 120%;
+  text-align: center;
+}
+
+.dialog button {
+  border: 1px solid #ffffff25;
+}
+
+.dialog button:hover {
+  border: 1px solid #ffffffcc;
+}
+
+.panel label {
   display: block;
   margin: 0.5em 0;
   padding: 0;
 }
 
-#uiPanel>*:first-child {
+.panel>*:first-child {
   margin-top: 0;
 }
 
-#uiPanel>*:last-child {
+.panel>*:last-child, .dialog>*:last-child {
   margin-bottom: 0;
+}
+
+
+#uiPanel {
+  position: absolute;
+}
+
+.developerNote {
+  font-family: 'Roboto Serif', serif;
+  font-size: 90%;
+  font-weight: 200;
+  font-style: italic;
+  color: #ffffff99;
+  hyphens: auto;
+}
+
+span.label {
+  font-weight: 500;
+  color: #fff;
+}
+
+.noChildPointerEvents, .noChildPointerEvents * {
+  pointer-events: none;
 }
