--- a/packages/demos-babylon/src/chatbotDemo.css
+++ b/packages/demos-babylon/src/chatbotDemo.css
@@ -15,15 +15,18 @@
   max-width: 220px;
 }
 
-#transcript {
+#userMessageContainer {
   position: absolute;
   bottom: 10vh;
   left: 0;
   right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
-#transcript .label {
+#userMessageContainer .label {
   margin-right: 0.5em;
 }
 
@@ -36,6 +39,12 @@
 
 #talkButton:active {
   animation: 0.6s pulsingButton infinite alternate;
+}
+
+#processingMessage p {
+  padding: 0;
+  margin: 0;
+  color: #ffffff88;
 }
 
 @keyframes pulsingButton {
